--- a/src/containers/AboutUsPage/AboutUsPage.module.css
+++ b/src/containers/AboutUsPage/AboutUsPage.module.css
@@ -1,10 +1,27 @@
+.AboutUsPage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
 .ProductList{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
+    
   }
   
   .ProductList_card{
     width: 20%;
   }
+  .title{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 70%;
+    color: olive;
+    font-weight: bold;
+}
+
